--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Coin</string>
     <string name="tossImage"></string>
-    <string name="tossBu
+    <string name="tossButton">Toss</strin
