--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Coin</string>
     <string name="tossImage"></string>
-    <string name="tossButton">Toss</strin
+    <string name="tossButton">Toss</string>
+    <string name="
