--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Coin</string>
     <string name="tossImage"></string>
     <string name="tossButton">Toss</string>
-    <string name="title">Make Decision</
+    <string name="title">Make Decision</string>
+</resources>
